Change spctl usages to new spctl methods for test scripts

--- a/test/vm-cb-user-validation-cli/common/setup.env
+++ b/test/vm-cb-user-validation-cli/common/setup.env
@@ -13,8 +13,7 @@ KEYPAIR_NAME=${PREFIX}-keypair-01
 VM_NAME=${PREFIX}-VM
 
 
-# env for spctl
-CLIPATH=$CBSPIDER_ROOT/interface
+CLIPATH=$CBSPIDER_ROOT/cli
 
 # CSP setup.env path
 CSPSETUP_PATH=$CBSPIDER_ROOT/test/vm-cb-user-validation-cli/common/$1
