Add Name Env. for adding Disk and MyImage Test scenario

--- a/test/vm-cb-user-validation-cli/common/setup.env
+++ b/test/vm-cb-user-validation-cli/common/setup.env
@@ -12,6 +12,8 @@ KEYPAIR_NAME=${PREFIX}-keypair-01
 
 VM_NAME=${PREFIX}-VM
 
+DISK_NAME=${PREFIX}-disk-01
+MYIMAGE_NAME=${PREFIX}-myimage-01
 
 CLIPATH=$CBSPIDER_ROOT/cli
 
