--- a/cloud-driver-libs/region/tencent_region_meta.yaml
+++ b/cloud-driver-libs/region/tencent_region_meta.yaml
@@ -66,87 +66,96 @@ DisplayName:
     sa-sao-paulo-2: Brazil, São Paulo
 
 CSPDisplayName:
-  ap-beijing: Mainland China (Beijing)
-    ap-beijing-1: Mainland China (Beijing)
-    ap-beijing-2: Mainland China (Beijing)
+  ap-beijing: North China (Beijing)
+    ap-beijing-1: North China (Beijing) # (sold out)
+    ap-beijing-2: North China (Beijing) # (sold out)
+    ap-beijing-3: North China (Beijing)
+    ap-beijing-4: North China (Beijing) # (sold out)
+    ap-beijing-5: North China (Beijing) # (sold out)
+    ap-beijing-6: North China (Beijing)
+    ap-beijing-7: North China (Beijing)
 
-  ap-chengdu: Mainland China (Chengdu)
-    ap-chengdu-1: Mainland China (Chengdu)
-    ap-chengdu-2: Mainland China (Chengdu)
+  ap-chengdu: Southwest China (Chengdu)
+    ap-chengdu-1: Southwest China (Chengdu)
+    ap-chengdu-2: Southwest China (Chengdu) # (sold out)
 
-  ap-chongqing: Mainland China (Chongqing)
-    ap-chongqing-1: Mainland China (Chongqing)
-    ap-chongqing-2: Mainland China (Chongqing)
+  ap-chongqing: Southwest China (Chongqing)
+    ap-chongqing-1: Southwest China (Chongqing)
 
-  ap-guangzhou: Mainland China (Guangzhou)
-    ap-guangzhou-1: Mainland China (Guangzhou)
-    ap-guangzhou-2: Mainland China (Guangzhou)
-    ap-guangzhou-3: Mainland China (Guangzhou)
-    ap-guangzhou-4: Mainland China (Guangzhou)
+  ap-guangzhou: South China (Guangzhou) 
+    ap-guangzhou-1: South China (Guangzhou) # (sold out) 
+    ap-guangzhou-2: South China (Guangzhou) # (sold out) 
+    ap-guangzhou-3: South China (Guangzhou) # (sold out) 
+    ap-guangzhou-4: South China (Guangzhou) # (sold out) 
+    ap-guangzhou-6: South China (Guangzhou) 
+    ap-guangzhou-7: South China (Guangzhou) 
 
-  ap-nanjing: Mainland China (Nanjing)
-    ap-nanjing-1: Mainland China (Nanjing)
-    ap-nanjing-2: Mainland China (Nanjing)
+  ap-nanjing: East China (Nanjing)
+    ap-nanjing-1: East China (Nanjing)
+    ap-nanjing-2: East China (Nanjing) # (sold out)
+    ap-nanjing-3: East China (Nanjing)
 
-  ap-shanghai: Mainland China (Shanghai)
-    ap-shanghai-1: Mainland China (Shanghai)
-    ap-shanghai-2: Mainland China (Shanghai)
+  ap-shanghai: East China (Shanghai)
+    ap-shanghai-1: East China (Shanghai) # (sold out) 
+    ap-shanghai-2: East China (Shanghai)
+    ap-shanghai-3: East China (Shanghai) # (sold out) 
+    ap-shanghai-4: East China (Shanghai) # (sold out) 
+    ap-shanghai-5: East China (Shanghai)
 
-  ap-shenzhen-fsi: Mainland China (Shenzhen Finance)
-    ap-shenzhen-fsi-1: Mainland China (Shenzhen Finance)
-    ap-shenzhen-fsi-2: Mainland China (Shenzhen Finance)
+  ap-shenzhen-fsi: South China (Shenzhen) # Not in the csp's list. finance purpose region
+    ap-shenzhen-fsi-1: South China (Shenzhen)
+    ap-shenzhen-fsi-2: South China (Shenzhen)
 
-  ap-tianjin: Mainland China (Tianjin)
-    ap-tianjin-1: Mainland China (Tianjin)
-    ap-tianjin-2: Mainland China (Tianjin)
+  ap-tianjin: North China (Tianjin) # Not in the csp's list
+    ap-tianjin-1: North China (Tianjin)
 
-  ap-hongkong: Hong Kong
-    ap-hongkong-1: Hong Kong
-    ap-hongkong-2: Hong Kong
+  ap-hongkong: Hong Kong/Macao/Taiwan (Hong Kong, China)
+    ap-hongkong-1: Hong Kong/Macao/Taiwan (Hong Kong, China)
+    ap-hongkong-2: Hong Kong/Macao/Taiwan (Hong Kong, China)
+    ap-hongkong-3: Hong Kong/Macao/Taiwan (Hong Kong, China)
 
-  ap-tokyo: Japan (Tokyo)
-    ap-tokyo-1: Japan (Tokyo)
-    ap-tokyo-2: Japan (Tokyo)
+  ap-tokyo: Northeast Asia (Tokyo)
+    ap-tokyo-1: Northeast Asia (Tokyo)
+    ap-tokyo-2: Northeast Asia (Tokyo)
 
-  ap-seoul: South Korea (Seoul)
-    ap-seoul-1: South Korea (Seoul)
-    ap-seoul-2: South Korea (Seoul)
+  ap-seoul: Northeast Asia (Seoul)
+    ap-seoul-1: Northeast Asia (Seoul)
+    ap-seoul-2: Northeast Asia (Seoul)
 
   ap-singapore: Southeast Asia (Singapore)
     ap-singapore-1: Southeast Asia (Singapore)
     ap-singapore-2: Southeast Asia (Singapore)
+    ap-singapore-3: Southeast Asia (Singapore)
+    ap-singapore-4: Southeast Asia (Singapore)
 
-  ap-bangkok: Thailand (Bangkok)
-    ap-bangkok-1: Thailand (Bangkok)
-    ap-bangkok-2: Thailand (Bangkok)
+  ap-bangkok: Southeast Asia (Bangkok)
+    ap-bangkok-1: Southeast Asia (Bangkok)
+    ap-bangkok-2: Southeast Asia (Bangkok)
 
-  ap-mumbai: India (Mumbai)
-    ap-mumbai-1: India (Mumbai)
-    ap-mumbai-2: India (Mumbai)
+  ap-mumbai: South Asia (Mumbai) # Not in the csp's list
+    ap-mumbai-1: South Asia (Mumbai)
 
-  ap-jakarta: Indonesia (Jakarta)
-    ap-jakarta-1: Indonesia (Jakarta)
-    ap-jakarta-2: Indonesia (Jakarta)
+  ap-jakarta: Southeast Asia (Jakarta)
+    ap-jakarta-1: Southeast Asia (Jakarta)
 
-  eu-frankfurt: EU (Frankfurt)
-    eu-frankfurt-1: EU (Frankfurt)
-    eu-frankfurt-2: EU (Frankfurt)
+  eu-frankfurt: Europe (Frankfurt)
+    eu-frankfurt-1: Europe (Frankfurt)
 
-  eu-moscow: Russia (Moscow)
-    eu-moscow-1: Russia (Moscow)
-    eu-moscow-2: Russia (Moscow)
+  eu-moscow: Europe (Moscow) # Not in the csp's list
+    eu-moscow-1: Europe (Moscow)
+    eu-moscow-2: Europe (Moscow)
 
-  na-siliconvalley: US West (Silicon Valley)
-    na-siliconvalley-1: US West (Silicon Valley)
-    na-siliconvalley-2: US West (Silicon Valley)
+  na-siliconvalley: West US (Silicon Valley)
+    na-siliconvalley-1: West US (Silicon Valley)
+    na-siliconvalley-2: West US (Silicon Valley)
 
-  na-ashburn: US East (Ashburn)
-    na-ashburn-1: US East (Ashburn)
-    na-ashburn-2: US East (Ashburn)
+  na-ashburn: East US (Virginia)
+    na-ashburn-1: East US (Virginia)
+    na-ashburn-2: East US (Virginia)
 
-  na-toronto: Canada (Toronto)
-    na-toronto-1: Canada (Toronto)
-    na-toronto-2: Canada (Toronto)
+  na-toronto: North America (Toronto) # Not in the csp's list
+    na-toronto-1: North America (Toronto)
+    na-toronto-2: North America (Toronto)
 
   sa-sao-paulo: South America (São Paulo)
     sa-sao-paulo-1: South America (São Paulo)
