--- a/cloud-driver-libs/region/aws_region_meta.yaml
+++ b/cloud-driver-libs/region/aws_region_meta.yaml
@@ -15,11 +15,13 @@ DisplayName:
   us-west-1: United States, Northern California
     us-west-1a: United States, Northern California
     us-west-1b: United States, Northern California
+    us-west-1c: United States, Northern California
 
   us-west-2: United States, Oregon
     us-west-2a: United States, Oregon
     us-west-2b: United States, Oregon
     us-west-2c: United States, Oregon
+    us-west-2d: United States, Oregon
 
   af-south-1: South Africa, Cape Town
     af-south-1a: South Africa, Cape Town
@@ -41,10 +43,10 @@ DisplayName:
     ap-south-2b: India, Hyderabad
     ap-south-2c: India, Hyderabad
 
-  ap-southeast-1: Singapore
-    ap-southeast-1a: Singapore
-    ap-southeast-1b: Singapore
-    ap-southeast-1c: Singapore
+  ap-southeast-1: Singapore, Singapore
+    ap-southeast-1a: Singapore, Singapore
+    ap-southeast-1b: Singapore, Singapore
+    ap-southeast-1c: Singapore, Singapore
 
   ap-southeast-2: Australia, Sydney
     ap-southeast-2a: Australia, Sydney
@@ -61,6 +63,11 @@ DisplayName:
     ap-southeast-4b: Australia, Melbourne
     ap-southeast-4c: Australia, Melbourne
 
+  ap-southeast-5: Malaysia, Malaysia # 2024.8.23
+    ap-southeast-4a: Malaysia, Malaysia
+    ap-southeast-4b: Malaysia, Malaysia
+    ap-southeast-4c: Malaysia, Malaysia
+    
   ap-northeast-1: Japan, Tokyo
     ap-northeast-1a: Japan, Tokyo
     ap-northeast-1b: Japan, Tokyo
@@ -78,60 +85,75 @@ DisplayName:
     ap-northeast-3b: Japan, Osaka
     ap-northeast-3c: Japan, Osaka
 
-  ca-central-1: Canada, Central
-    ca-central-1a: Canada, Central
-    ca-central-1b: Canada, Central
-    ca-central-1c: Canada, Central
+  ca-central-1: Canada, Quebec
+    ca-central-1a: Canada, Quebec
+    ca-central-1b: Canada, Quebec
+    ca-central-1c: Canada, Quebec
 
-  eu-central-1: Germany, Frankfurt
-    eu-central-1a: Germany, Frankfurt
-    eu-central-1b: Germany, Frankfurt
-    eu-central-1c: Germany, Frankfurt
+  ca-west-1: Canada, Alberta
+    ca-central-1a: Canada, Alberta
+    ca-central-1b: Canada, Alberta
+    ca-central-1c: Canada, Alberta
+
+  cn-north-1: China, Beijing
+    cn-north-1a: China, Beijing
+    cn-north-1b: China, Beijing
+    cn-north-1c: China, Beijing
+
+  cn-northwest-1: China, Ningxia
+    cn-northwest-1a: China, Ningxia
+    cn-northwest-1b: China, Ningxia
+    cn-northwest-1c: China, Ningxia
+
+  eu-central-1: Germany, Brandenburg
+    eu-central-1a: Germany, Brandenburg
+    eu-central-1b: Germany, Brandenburg
+    eu-central-1c: Germany, Brandenburg
 
   eu-central-2: Switzerland, Zurich
     eu-central-2a: Switzerland, Zurich
     eu-central-2b: Switzerland, Zurich
     eu-central-2c: Switzerland, Zurich
 
-  eu-west-1: Ireland, Dublin
-    eu-west-1a: Ireland, Dublin
-    eu-west-1b: Ireland, Dublin
-    eu-west-1c: Ireland, Dublin
+  eu-west-1: Ireland, Leinster
+    eu-west-1a: Ireland, Leinster
+    eu-west-1b: Ireland, Leinster
+    eu-west-1c: Ireland, Leinster
 
-  eu-west-2: United Kingdom, London
-    eu-west-2a: United Kingdom, London
-    eu-west-2b: United Kingdom, London
-    eu-west-2c: United Kingdom, London
-
-  eu-west-3: France, Paris
-    eu-west-3a: France, Paris
-    eu-west-3b: France, Paris
-    eu-west-3c: France, Paris
+  eu-west-2: United Kingdom, England
+    eu-west-2a: United Kingdom, England
+    eu-west-2b: United Kingdom, England
+    eu-west-2c: United Kingdom, England
+    
+  eu-west-3: France, Île-de-France
+    eu-west-3a: France, Île-de-France
+    eu-west-3b: France, Île-de-France
+    eu-west-3c: France, Île-de-France
 
   eu-north-1: Sweden, Stockholm
     eu-north-1a: Sweden, Stockholm
     eu-north-1b: Sweden, Stockholm
     eu-north-1c: Sweden, Stockholm
 
-  eu-south-1: Italy, Milan
-    eu-south-1a: Italy, Milan
-    eu-south-1b: Italy, Milan
-    eu-south-1c: Italy, Milan
+  eu-south-1: Italy, Lombardy
+    eu-south-1a: Italy, Lombardy
+    eu-south-1b: Italy, Lombardy
+    eu-south-1c: Italy, Lombardy
 
-  eu-south-2: Spain, Madrid
-    eu-south-2a: Spain, Madrid
-    eu-south-2b: Spain, Madrid
-    eu-south-2c: Spain, Madrid
+  eu-south-2: Spain, Catalonia
+    eu-south-2a: Spain, Catalonia
+    eu-south-2b: Spain, Catalonia
+    eu-south-2c: Spain, Catalonia
 
   il-central-1: Israel, Tel Aviv
     il-central-1a: Israel, Tel Aviv
     il-central-1b: Israel, Tel Aviv
     il-central-1c: Israel, Tel Aviv
 
-  me-south-1: Bahrain
-    me-south-1a: Bahrain
-    me-south-1b: Bahrain
-    me-south-1c: Bahrain
+  me-south-1: Bahrain, Manama
+    me-south-1a: Bahrain, Manama
+    me-south-1b: Bahrain, Manama
+    me-south-1c: Bahrain, Manama
 
   me-central-1: United Arab Emirates, Dubai
     me-central-1a: United Arab Emirates, Dubai
@@ -165,6 +187,7 @@ CSPDisplayName:
     us-west-2a: US West (Oregon)
     us-west-2b: US West (Oregon)
     us-west-2c: US West (Oregon)
+    us-west-2d: US West (Oregon)
 
   af-south-1: Africa (Cape Town)
     af-south-1a: Africa (Cape Town)
@@ -206,6 +229,11 @@ CSPDisplayName:
     ap-southeast-4b: Asia Pacific (Melbourne)
     ap-southeast-4c: Asia Pacific (Melbourne)
 
+  ap-southeast-5: Asia Pacific (Malaysia) # 2024.8.23
+    ap-southeast-4a: Asia Pacific (Malaysia)
+    ap-southeast-4b: Asia Pacific (Malaysia)
+    ap-southeast-4c: Asia Pacific (Malaysia)
+    
   ap-northeast-1: Asia Pacific (Tokyo)
     ap-northeast-1a: Asia Pacific (Tokyo)
     ap-northeast-1b: Asia Pacific (Tokyo)
@@ -228,45 +256,60 @@ CSPDisplayName:
     ca-central-1b: Canada (Central)
     ca-central-1c: Canada (Central)
 
-  eu-central-1: EU (Frankfurt)
-    eu-central-1a: EU (Frankfurt)
-    eu-central-1b: EU (Frankfurt)
-    eu-central-1c: EU (Frankfurt)
+  ca-west-1: Canada West (Calgary)
+    ca-central-1a: Canada West (Calgary)
+    ca-central-1b: Canada West (Calgary)
+    ca-central-1c: Canada West (Calgary)
+  
+  cn-north-1: China (Beijing)
+    cn-north-1a: China (Beijing)
+    cn-north-1b: China (Beijing)
+    cn-north-1c: China (Beijing)
 
-  eu-central-2: EU (Zurich)
-    eu-central-2a: EU (Zurich)
-    eu-central-2b: EU (Zurich)
-    eu-central-2c: EU (Zurich)
+  cn-northwest-1: China (Ningxia)
+    cn-northwest-1a: China (Ningxia)
+    cn-northwest-1b: China (Ningxia)
+    cn-northwest-1c: China (Ningxia)
+    
+  eu-central-1: Europe (Frankfurt)
+    eu-central-1a: Europe (Frankfurt)
+    eu-central-1b: Europe (Frankfurt)
+    eu-central-1c: Europe (Frankfurt)
 
-  eu-west-1: EU (Ireland)
-    eu-west-1a: EU (Ireland)
-    eu-west-1b: EU (Ireland)
-    eu-west-1c: EU (Ireland)
+  eu-central-2: Europe (Zurich)
+    eu-central-2a: Europe (Zurich)
+    eu-central-2b: Europe (Zurich)
+    eu-central-2c: Europe (Zurich)
 
-  eu-west-2: EU (London)
-    eu-west-2a: EU (London)
-    eu-west-2b: EU (London)
-    eu-west-2c: EU (London)
+  eu-west-1: Europe (Ireland)
+    eu-west-1a: Europe (Ireland)
+    eu-west-1b: Europe (Ireland)
+    eu-west-1c: Europe (Ireland)
 
-  eu-west-3: EU (Paris)
-    eu-west-3a: EU (Paris)
-    eu-west-3b: EU (Paris)
-    eu-west-3c: EU (Paris)
+  eu-west-2: Europe (London)
+    eu-west-2a: Europe (London)
+    eu-west-2b: Europe (London)
+    eu-west-2c: Europe (London)
 
-  eu-north-1: EU (Stockholm)
-    eu-north-1a: EU (Stockholm)
-    eu-north-1b: EU (Stockholm)
-    eu-north-1c: EU (Stockholm)
+  eu-west-3: Europe (Paris)
+    eu-west-3a: Europe (Paris)
+    eu-west-3b: Europe (Paris)
+    eu-west-3c: Europe (Paris)
 
-  eu-south-1: EU (Milan)
-    eu-south-1a: EU (Milan)
-    eu-south-1b: EU (Milan)
-    eu-south-1c: EU (Milan)
+  eu-north-1: Europe (Stockholm)
+    eu-north-1a: Europe (Stockholm)
+    eu-north-1b: Europe (Stockholm)
+    eu-north-1c: Europe (Stockholm)
 
-  eu-south-2: EU (Madrid)
-    eu-south-2a: EU (Madrid)
-    eu-south-2b: EU (Madrid)
-    eu-south-2c: EU (Madrid)
+  eu-south-1: Europe (Milan)
+    eu-south-1a: Europe (Milan)
+    eu-south-1b: Europe (Milan)
+    eu-south-1c: Europe (Milan)
+
+  eu-south-2: Europe (Spain)
+    eu-south-2a: Europe (Spain)
+    eu-south-2b: Europe (Spain)
+    eu-south-2c: Europe (Spain)
 
   il-central-1: Israel (Tel Aviv)
     il-central-1a: Israel (Tel Aviv)
@@ -287,3 +330,7 @@ CSPDisplayName:
     sa-east-1a: South America (São Paulo)
     sa-east-1b: South America (São Paulo)
     sa-east-1c: South America (São Paulo)
+
+
+# 출처 : https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html#concepts-availability-zones
+# 출처 : https://www.aws-services.info/regions.html
