--- a/test/vm-cb-user-validation-cli/common/gcp/setup.env
+++ b/test/vm-cb-user-validation-cli/common/gcp/setup.env
@@ -1,3 +1,3 @@
 CONN_CONFIG=gcp-iowa-config
-IMAGE_NAME=https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20220505
-SPEC_NAME=f1-micro
+IMAGE_NAME=https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2404-noble-amd64-v20240423
+SPEC_NAME=e2-standard-2
