update ncpvpc common vm image and vm spec

--- a/test/vm-cb-user-validation-cli/common/ncpvpc/setup.env
+++ b/test/vm-cb-user-validation-cli/common/ncpvpc/setup.env
@@ -1,3 +1,3 @@
 CONN_CONFIG=ncpvpc-korea1-config
-IMAGE_NAME=SW.VSVR.OS.LNX64.UBNTU.SVR2004.B050
-SPEC_NAME=SVR.VSVR.HICPU.C004.M008.NET.SSD.B050.G002
+IMAGE_NAME=16187005
+SPEC_NAME=c4-g2-s50
