--- a/setup.env
+++ b/setup.env
@@ -11,8 +11,8 @@ export CBSPIDER_ROOT=`cd $SCRIPT_DIR && pwd`
 #export SERVER_ADDRESS=":3000"
 
 # examples for K8S env
-#export SERVER_ADDRESS=":1024"
-#export SERVICE_ADDRESS="1.2.3.4:31024"
+export SERVER_ADDRESS="172.23.49.241:1024"
+export SERVICE_ADDRESS="172.23.49.241:1024"
 
 ### Set the library type of Cloud Driver pkg.
 # ON is a shared library type.
