Add a Test code for VM

--- a/permissionTest/setup.env
+++ b/permissionTest/setup.env
@@ -2,3 +2,6 @@ export RW_CONN_NAME=aws-rw-conn
 export RW_CONN2_NAME=aws-rw-conn2
 export READONLY_CONN_NAME=aws-readonly-conn
 export NON_PERMISSION_CONN_NAME=aws-non-permission-conn
+
+export VM_IMAGE=ami-00978328f54e31526
+export VM_SPEC=t2.micro
