--- a/setup.env
+++ b/setup.env
@@ -11,7 +11,7 @@ export CBSPIDER_ROOT=`cd $SCRIPT_DIR && pwd`
 #export SERVER_ADDRESS=":3000"
 
 # examples for K8S env
-export SERVER_ADDRESS="192.168.130.44:1024"
+#export SERVER_ADDRESS=":1024"
 #export SERVICE_ADDRESS="1.2.3.4:31024"
 
 ### Set the library type of Cloud Driver pkg.
