--- a/cloud-driver-libs/cloudos_meta.yaml
+++ b/cloud-driver-libs/cloudos_meta.yaml
@@ -15,7 +15,7 @@ AWS:
   rootdisktype: standard / gp2 / gp3
   disktype: standard / gp2 / gp3 / io1 / io2 / st1 / sc1
   disksize: standard|1|1024|GB / gp2|1|16384|GB / gp3|1|16384|GB / io1|4|16384|GB / io2|4|16384|GB / st1|125|16384|GB / sc1|125|16384|GB
-  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster
+  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster / FileSystem
   idmaxlength: 255 / 256 / 255 / 255 / 255 / 256 / 32 / 127 / 100
   defaultregiontoquery: ap-northeast-2 / ap-northeast-2a
 
@@ -26,7 +26,7 @@ AZURE:
   # type issues: https://github.com/cloud-barista/cb-spider/pull/529#issue-1051678985
   rootdisktype: PremiumSSD / StandardSSD / StandardHDD
   disktype: PremiumSSD / StandardSSD / StandardHDD
-  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster
+  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster / FileSystem
   idmaxlength: 64 / 80 / 64 / 80 / 64 / 80 / 80 / 80 / 63
   defaultregiontoquery: koreacentral / 1
 
@@ -37,7 +37,7 @@ GCP:
   rootdisktype: pd-standard / pd-balanced / pd-ssd / pd-extreme
   disktype: pd-standard / pd-balanced / pd-ssd / pd-extreme
   disksize: pd-standard|10|65536|GB / pd-balanced|10|65536|GB / pd-ssd|10|65536|GB / pd-extreme|500|65536|GB
-  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster
+  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster / FileSystem
   #idmaxlength: 63 / 63 / 63 / 0 / 63
   idmaxlength: 63 / 63 / 57 / 0 / 63 / 63 / 63 / 63 / 40
 
@@ -51,7 +51,7 @@ ALIBABA:
   #rootdisksize: cloud_efficiency|20|32768|GB / cloud|5|2000|GB / cloud_ssd|20|32768|GB
   disktype: cloud / cloud_efficiency / cloud_ssd / cloud_essd
   disksize: cloud|5|2000|GB / cloud_efficiency|20|32768|GB / cloud_ssd|20|32768|GB / cloud_essd_PL0|40|32768|GB / cloud_essd_PL1|20|32768|GB / cloud_essd_PL2|461|32768|GB / cloud_essd_PL3|1261|32768|GB
-  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster
+  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster / FileSystem
   idmaxlength: 128 / 128 / 128 / 128 / 128 / 128 / 80 / 128 / 63
   defaultregiontoquery: ap-northeast-2 / ap-northeast-2a
 
@@ -64,7 +64,7 @@ TENCENT:
   rootdisksize: CLOUD_PREMIUM|50|16000|GB / CLOUD_SSD|50|16000|GB
   disktype: CLOUD_PREMIUM / CLOUD_SSD / CLOUD_HSSD / CLOUD_BASIC / CLOUD_TSSD
   disksize: CLOUD_PREMIUM|10|32000|GB / CLOUD_SSD|20|32000|GB / CLOUD_HSSD|20|32000|GB / CLOUD_BASIC|10|32000|GB / CLOUD_TSSD|10|32000|GB
-  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster
+  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster / FileSystem
   idmaxlength: 60 / 60 / 60 / 25 / 88 / 60 / 60 / 60 /50
   defaultregiontoquery: ap-seoul / ap-seoul-1
 
@@ -72,7 +72,7 @@ IBM:
   region: Region / Zone
   credential: ApiKey
   credentialcsp: ApiKey
-  #idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster
+  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster / FileSystem
   idmaxlength: 63 / 63 / 63 / 63 / 63 / 63 / 63 / 63 / 63
   defaultregiontoquery: us-south / us-south-1
 
@@ -80,9 +80,8 @@ OPENSTACK:
   region: Region / Zone
   credential: IdentityEndpoint / Username / Password / DomainName / ProjectID
   credentialcsp: IdentityEndpoint / Username / Password / DomainName / ProjectID
-  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage
-  idmaxlength: 255 / 255 / 255 / 255 / 255 / 255 / 255 / 255
-
+  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster / FileSystem
+  idmaxlength: 255 / 255 / 255 / 255 / 255 / 255 / 255 / 255 / 0  
 NCP:
   region: Region / Zone
   credential: ClientId / ClientSecret
@@ -102,7 +101,7 @@ NCPVPC:
   rootdisksize: SSD|50|100|GB / HDD|50|100|GB
   disktype: SSD / HDD
   disksize: SSD|10|2000|GB / HDD|10|2000|GB
-  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster
+  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster / FileSystem
   idmaxlength: 30 / 30 / 30 / 30 / 30 / 30 / 30 / 30 / 20
 
 NHNCLOUD:
@@ -113,7 +112,7 @@ NHNCLOUD:
   rootdisksize: General_HDD|20|1000|GB / General_SSD|20|1000|GB
   disktype: General_HDD / General_SSD
   disksize: General_HDD|10|2000|GB / General_SSD|10|2000|GB
-  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster
+  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster / FileSystem
   idmaxlength: 32 / 32 / 255 / 32 / 90 / 255 / 80 / 255 / 32
 
 KTCLOUD:
@@ -124,8 +123,8 @@ KTCLOUD:
   rootdisksize: HDD|20|50|GB / SSD|20|50|GB
   disktype: HDD / SSD-Provisioned
   disksize: HDD|10|500|GB / SSD-Provisioned|100|800|GB
-  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage
-  idmaxlength: 30 / 30 / 30 / 100 / 63 / 50 / 30 / 32
+  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster
+  idmaxlength: 30 / 30 / 30 / 100 / 63 / 50 / 30 / 32 / 0
 
 KTCLOUDVPC:
   region: Region / Zone
@@ -135,8 +134,8 @@ KTCLOUDVPC:
   rootdisksize: HDD|50|100|GB / SSD|50|100|GB
   disktype: HDD / SSD
   disksize: HDD|10|2000|GB / SSD|10|2000|GB
-  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage
-  idmaxlength: 30 / 22 / 30 / 100 / 63 / 50 / 30 / 50
+  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster / FileSystem
+  idmaxlength: 30 / 22 / 30 / 100 / 63 / 50 / 30 / 50 / 0
 
 #--- Emulation
 
@@ -144,7 +143,7 @@ MOCK:
   region: Region
   credential: MockName
   credentialcsp: MockName
-  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster
+  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster / FileSystem
   idmaxlength: 255 / 255 / 255 / 255 / 255 / 255 / 255 / 255 / 255
   rootdisktype: SSD /HDD / MEM
   disktype: SSD / HDD / MEM
