--- a/develop.env
+++ b/develop.env
@@ -51,4 +51,4 @@ alias cdcli='cd $CBSPIDER_ROOT/cli'
 PATH="$CBSPIDER_ROOT/cli:$PATH"
 
 # terminal prompt
-export PS1="\[\e[36;1m\]\u@\[\e[32;1m\]\h:\[\e[31;1m\]\W# \[\e[0m\]"
+export PS1="\[\033[36;1m\]\u@\[\033[32;1m\]\h:\[\033[31;1m\]\W# \[\033[0m\]"
