--- a/cloud-control-manager/cloud-driver/drivers/azure/main/conf/config.yaml.sample
+++ b/cloud-control-manager/cloud-driver/drivers/azure/main/conf/config.yaml.sample
@@ -76,3 +76,11 @@ azure:
       updateDiskSize: 78
       attachedVM:
         nameId:
+    file:
+      IID:
+        nameId: mcb-test-file
+      VpcIID:
+        nameId:  mcb-test-vpc
+      AccessSubnetIIDs:
+        - nameId: mcb-test-sub-1
+        - nameId: mcb-test-sub-2
