--- a/cloud-control-manager/cloud-driver/drivers/azure/main/conf/config.yaml.sample
+++ b/cloud-control-manager/cloud-driver/drivers/azure/main/conf/config.yaml.sample
@@ -76,3 +76,11 @@ azure:
       updateDiskSize: 78
       attachedVM:
         nameId:
+    file:
+      IID:
+        nameId: test-create-2
+      VpcIID:
+        nameId: nhn-vpc-01
+      AccessSubnetIIDs:
+        - nameId: nhn-vpc-sb-01
+        - nameId: nhn-vpc-sb-02
