--- a/test/vm-cb-user-validation-cli/common/openstack/setup.env
+++ b/test/vm-cb-user-validation-cli/common/openstack/setup.env
@@ -1,3 +1,3 @@
 CONN_CONFIG=openstack-config01
-IMAGE_NAME=16681742-f408-444d-a430-dd21a4bef42c
-SPEC_NAME=ETRI-small-2
+IMAGE_NAME=631bf290-5ec0-4d01-aac2-9cf7573296ea
+SPEC_NAME=m1.small
