--- a/utils/default-connection-helper/.ktclassic-credential.sample
+++ b/utils/default-connection-helper/.ktclassic-credential.sample
@@ -1,2 +1,2 @@
-ktcloudclassic_client_id="YOUR_KTCLOUDCLASSIC_CLIENT_ID"
-ktcloudclassic_client_secret="YOUR_KTCLOUDCLASSIC_CLIENT_SECRET"
+ktclassic_client_id="YOUR_KTCLOUDCLASSIC_CLIENT_ID"
+ktclassic_client_secret="YOUR_KTCLOUDCLASSIC_CLIENT_SECRET"
