--- a/utils/default-connection-helper/.nhn-credential.sample
+++ b/utils/default-connection-helper/.nhn-credential.sample
@@ -1,5 +1,5 @@
-nhncloud_identity_endpoint="YOUR_NHN_CLOUD_IDENTITY_ENDPOINT"
-nhncloud_username="YOUR_NHN_CLOUD_USERNAME"
-nhncloud_password="YOUR_NHN_CLOUD_PASSWORD"
-nhncloud_domain_name="YOUR_NHN_CLOUD_DOMAIN_NAME"
-nhncloud_tenant_id="YOUR_NHN_CLOUD_TENANT_ID"
+nhn_identity_endpoint="YOUR_NHN_CLOUD_IDENTITY_ENDPOINT"
+nhn_username="YOUR_NHN_CLOUD_USERNAME"
+nhn_password="YOUR_NHN_CLOUD_PASSWORD"
+nhn_domain_name="YOUR_NHN_CLOUD_DOMAIN_NAME"
+nhn_tenant_id="YOUR_NHN_CLOUD_TENANT_ID"
