refactor:rename IBMVPC to IBM

--- a/cloud-control-manager/cloud-driver/drivers/ibm/main/conf/config.yaml.sample
+++ b/cloud-control-manager/cloud-driver/drivers/ibm/main/conf/config.yaml.sample
@@ -1,6 +1,6 @@
 ## Config for Ibm ##
 # Test : create => get
-ibmvpc:
+ibm:
   apiKey: XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
   region: us-south
   zone: us-south-1
