--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,7 @@ cloud-control-manager/cloud-driver/drivers/openstack/main/conf/config.yaml
 cloud-control-manager/cloud-driver/drivers/tencent/main/conf/testConfigTencent.yaml
 cloud-control-manager/cloud-driver/drivers/ncp/main/config/config.yaml
 cloud-control-manager/cloud-driver/drivers/nhn/main/conf/config.yaml
+cloud-control-manager/cloud-driver/drivers/kt/main/config/config.yaml
 cloud-control-manager/cloud-driver/drivers/ktclassic/main/config/config.yaml
 
 test/vm-cb-user-validation-cli/2.6-csp-test/connection/.*-credential
