feature/priceinfo-simple-mode-multi-csp-fixes

--- a/setup.env
+++ b/setup.env
@@ -23,6 +23,9 @@ export PLUGIN_SW=OFF
 # default: ON
 export ID_TRANSFORM_MODE=ON
 
+# default: OFF
+export VMSPECINFO_SIMPLE_MODE_IN_PRICEINFO=OFF
+
 # root path of cb-log
 export CBLOG_ROOT=$CBSPIDER_ROOT
 
