--- a/cloud-driver-libs/cloudos_meta.yaml
+++ b/cloud-driver-libs/cloudos_meta.yaml
@@ -81,13 +81,14 @@ OPENSTACK:
   credential: IdentityEndpoint / Username / Password / DomainName / ProjectID
   credentialcsp: IdentityEndpoint / Username / Password / DomainName / ProjectID
   # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster / FileSystem
-  idmaxlength: 255 / 255 / 255 / 255 / 255 / 255 / 255 / 255 / 0  
+  idmaxlength: 255 / 255 / 255 / 255 / 255 / 255 / 255 / 255 / 0
+  
 NCP:
   region: Region / Zone
   credential: ClientId / ClientSecret
   credentialcsp: ncloud_access_key / ncloud_secret_key
-  rootdisktype: SSD / HDD
-  rootdisksize: SSD|50|100|GB / HDD|50|100|GB
+  rootdisktype: HDD
+  rootdisksize: HDD|10|2000|GB
   disktype: SSD / HDD
   disksize: SSD|100|16380|GB / HDD|100|16380|GB
   # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM / Disk / NLB / MyImage / Cluster / FileSystem
