IBM: Fix test code config yaml

--- a/cloud-control-manager/cloud-driver/drivers/ibm/main/conf/config.yaml.sample
+++ b/cloud-control-manager/cloud-driver/drivers/ibm/main/conf/config.yaml.sample
@@ -119,4 +119,4 @@ ibm:
         vpcIID:
           nameId: "mcb-test-vpc"
         subnetIID:
-          - nameId: "mcb-test-vpc-subnet1"
+          nameId: "mcb-test-vpc-subnet1"
