Add AdminWeb Off Option

--- a/setup.env
+++ b/setup.env
@@ -26,6 +26,11 @@ export ID_TRANSFORM_MODE=ON
 # root path of cb-log
 export CBLOG_ROOT=$CBSPIDER_ROOT
 
+# AdminWeb ON/OFF setting
+# ON: Enable AdminWeb, OFF: Disable AdminWeb
+# default: ON
+export ADMINWEB=ON
+
 # If the value is empty, REST Auth disabed.
 export API_USERNAME=
 export API_PASSWORD=
