--- a/cloud-control-manager/cloud-driver/drivers/nhn/main/NHN_REST_test/1.export.env
+++ b/cloud-control-manager/cloud-driver/drivers/nhn/main/NHN_REST_test/1.export.env
@@ -2,11 +2,8 @@
 export OS_TOKEN="~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~"
 
 # If Region : KR1
-export OS_COMPUTE_API="https://kr1-api-instance.infrastructure.cloud.toast.com/v2/"
-export OS_IMAGE_API="https://kr1-api-image.infrastructure.cloud.toast.com/v2/"
-# COMPUTE_API, IMAGE_API => /v2/
-
-export OS_NETWORK_API="https://kr1-api-network.infrastructure.cloud.toast.com/"  
-# Caution!!
+export OS_COMPUTE_API="https://kr1-api-instance-infrastructure.nhncloudservice.com/v2/"
+export OS_IMAGE_API="https://kr1-api-image-infrastructure.nhncloudservice.com/"
+export OS_NETWORK_API="https://kr1-api-network-infrastructure.nhncloudservice.com/"  
 
 export TENANT_ID="~~~~~~~~~~~~~~~~~~~"
