--- a/test/vm-cb-user-validation-cli/common/azure/setup.env
+++ b/test/vm-cb-user-validation-cli/common/azure/setup.env
@@ -1,3 +1,3 @@
 CONN_CONFIG=azure-northeu-config
-IMAGE_NAME=Canonical:UbuntuServer:18.04-LTS:18.04.202106220
+IMAGE_NAME=Canonical:ubuntu-25_10:minimal:25.10.202512100
 SPEC_NAME=Standard_B1ls
