--- a/.github/workflows/continuous-delivery.yaml
+++ b/.github/workflows/continuous-delivery.yaml
@@ -107,6 +107,9 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.CR_PAT }}
 
+      - name: Docker prune
+        run: docker system prune -af
+
       - name: Build and publish
         id: docker_build
         uses: docker/build-push-action@v6
@@ -115,7 +118,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           target: prod
-          platforms: linux/amd64,linux/arm # linux/arm/v7,linux/arm64,linux/386,linux/ppc64le,linux/s390x,linux/arm/v6
+          platforms: linux/amd64,linux/arm64 # linux/arm/v7,linux/arm64,linux/386,linux/ppc64le,linux/s390x,linux/arm/v6
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           cache-from: type=local,src=/tmp/.buildx-cache
@@ -123,3 +126,4 @@ jobs:
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+
