enhance: Add S3 credential Info to connection helper util

--- a/utils/default-connection-helper/.gcp-credential.sample
+++ b/utils/default-connection-helper/.gcp-credential.sample
@@ -1,3 +1,7 @@
 gcp_private_key="YOUR_GCP_PRIVATE_KEY"
 gcp_project_id="YOUR_GCP_PROJECT_ID"
 gcp_client_email="YOUR_GCP_CLIENT_EMAIL"
+
+# for S3, cf) https://github.com/cloud-barista/cb-spider/wiki/Object-Storage-and-S3-API-Guide
+gcp_access_key="YOUR_GCP_ACCESS_KEY"
+gcp_secret="YOUR_GCP_SECRET"
