--- a/utils/default-connection-helper/.ibmvpc-credential.sample
+++ b/utils/default-connection-helper/.ibmvpc-credential.sample
@@ -1,1 +1,5 @@
 ibm_api_key="YOUR_IBM_API_KEY"
+
+# for S3, cf) https://github.com/cloud-barista/cb-spider/wiki/Object-Storage-and-S3-API-Guide
+ibm_access_key_id="YOUR_IBM_ACCESS_KEY_ID"
+ibm_secret_access_key="YOUR_IBM_SECRET_ACCESS_KEY"
