--- a/utils/default-connection-helper/.nhn-credential.sample
+++ b/utils/default-connection-helper/.nhn-credential.sample
@@ -3,3 +3,7 @@ nhn_username="YOUR_NHN_CLOUD_USERNAME"
 nhn_password="YOUR_NHN_CLOUD_PASSWORD"
 nhn_domain_name="YOUR_NHN_CLOUD_DOMAIN_NAME"
 nhn_tenant_id="YOUR_NHN_CLOUD_TENANT_ID"
+
+# for S3, cf) https://github.com/cloud-barista/cb-spider/wiki/Object-Storage-and-S3-API-Guide
+nhn_access_key="YOUR_NHN_ACCESS_KEY"
+nhn_secret_key="YOUR_NHN_SECRET_KEY"
