--- a/utils/default-connection-helper/.openstack-credential.sample
+++ b/utils/default-connection-helper/.openstack-credential.sample
@@ -3,3 +3,7 @@ openstack_username="YOUR_OPENSTACK_USERNAME"
 openstack_password="YOUR_OPENSTACK_PASSWORD"
 openstack_domain_name="YOUR_OPENSTACK_DOMAIN_NAME"
 openstack_project_id="YOUR_OPENSTACK_PROJECT_ID"
+
+# for S3, cf) https://github.com/cloud-barista/cb-spider/wiki/Object-Storage-and-S3-API-Guide
+openstack_access="YOUR_OPENSTACK_ACCESS"
+openstack_secret="YOUR_OPENSTACK_SECRET"
