--- a/utils/default-connection-helper/.kt-credential.sample
+++ b/utils/default-connection-helper/.kt-credential.sample
@@ -3,3 +3,7 @@ kt_username="YOUR_KT_USERNAME"
 kt_password="YOUR_KT_PASSWORD"
 kt_domain_name="YOUR_KT_DOMAIN_NAME"
 kt_project_id="YOUR_KT_PROJECT_ID"
+
+# for S3, cf) https://github.com/cloud-barista/cb-spider/wiki/Object-Storage-and-S3-API-Guide
+kt_access_key="YOUR_KT_ACCESS_KEY"
+kt_secret_key="YOUR_KT_SECRET_KEY"
