--- a/setup.env
+++ b/setup.env
@@ -31,6 +31,11 @@ export CBLOG_ROOT=$CBSPIDER_ROOT
 # default: ON
 export ADMINWEB=ON
 
+# MC-Insight API Token for multi-cloud metadata search
+# Get token from MC-Insight service administrator
+# If empty, MC-Insight features will be disabled
+export MC_INSIGHT_API_TOKEN=
+
 # If the value is empty, REST Auth disabled.
 export API_USERNAME=
 export API_PASSWORD=
