feature: add recent and favoriate vm configuration management

--- a/setup.env
+++ b/setup.env
@@ -34,7 +34,7 @@ export ADMINWEB=ON
 # MC-Insight API Token for multi-cloud metadata search
 # Get token from MC-Insight service administrator
 # If empty, MC-Insight features will be disabled
-export MC_INSIGHT_API_TOKEN=
+export MC_INSIGHT_API_TOKEN=c72df1af9b1f0c29
 
 # If the value is empty, REST Auth disabled.
 export API_USERNAME=
