chore:update default setup.env

--- a/setup.env
+++ b/setup.env
@@ -39,4 +39,4 @@ export MC_INSIGHT_API_TOKEN=c72df1af9b1f0c29
 # REST API Authentication (Basic Auth) - REQUIRED
 # - Both API_USERNAME and API_PASSWORD must be set. Server will not start without them.
 export API_USERNAME=admin
-#export API_PASSWORD=your-password
+export API_PASSWORD=
